--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,6 +1,6 @@
 .Weather {
   font-family: arial, sans-serif;
-  border: 1px solid #dadde1;
+  border: 1px solid #3b50b2;
   padding: 16px;
   border-radius: 4px;
   color: rgb(135, 135, 135);
@@ -22,4 +22,26 @@
   font-weight: 100;
   line-height: 19px;
   list-style: none;
+}
+.Weather .temperature {
+  font-weight: bold;
+  color: #1c4b82;
+  font-size: 64px;
+  line-height: 64px;
+  margin-left: 5px;
+  font-weight: 400;
+  margin-left: 10px;
+}
+
+.Weather canvas {
+  margin: 10px auto;
+}
+
+.Weather .unit {
+  color: rgb(33, 33, 33);
+  font-size: 16px;
+  font-weight: 400;
+  position: relative;
+  line-height: 1;
+  top: -34px;
 }
